apps/platform/trino/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-trino
  labels:
    platform.jaccloud.nl/tenant: platform
