apps/platform/trino/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: trino
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: trino
